<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brayanhoyos.colombia_turstica.HotelActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/tabla">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titlem"
                android:textSize="32dp"
                android:gravity="center"
                android:textColor="@color/darkorange"
                android:id="@+id/tihotel"
                android:background="@drawable/transpa4"
                android:textStyle="normal|bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:text="@string/ho"
                android:background="@drawable/transpa4"
                android:textSize="40dp"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="@color/darkorange"
                android:id="@+id/ho"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/ta">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/hotel1"
                    android:src="@drawable/hotel1"
                    android:layout_weight="0.5"
                    android:adjustViewBounds="true"
                    android:layout_span="2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tNombre"
                        android:text="@string/title_activity_hotel1"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/ta2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/hotel2"
                    android:src="@drawable/hotel2"
                    android:layout_weight="0.5"
                    android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView5"
                        android:text="@string/title_activity_hotel2"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_weight="0.5" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/ta3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/hotel3"
                    android:src="@drawable/hotel3"
                    android:layout_weight="0.5"
                    android:layout_column="19"
                    android:layout_span="2"
                    android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView9"
                        android:text="@string/title_activity_hotel3"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_weight="0.5" />

                </LinearLayout>
            </LinearLayout>

    </ScrollView>


</RelativeLayout>
